callSetterMethod will coerce numbers to longs